# Skribe

./: Cargo.toml  README.md
src/: cfg.rs  cmd_parser.rs  data.rs  db.rs  lib.rs
